--- a/First.html
+++ b/First.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Attempting a website...</title>
+    <title>Welcome</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <nav>
+      <a href="#about">About Me</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
     <h1>Hello, and welcome to my website!</h1>
-    <div id="Bio">
+    <div id="about">
+      <h1>About Me</h1>
       <p>
         Hello! My name is Michael Foster. I am a software engineer with
         Lockheed Martin RMS, though I am trying to expand my knowledge of web
         development. This is my first attempt at a personal website.
       </p>
     </div>
-    
+    <div id="projects">
+      <h1>Projects</h1>
+      <p><strong>Coming Soon...</strong></p>
+    </div>
+    <div id="contact" style="text-align:center">
+      <h1>Contact</h1>
+      <a href="mailto:mcfoster1110@gmail.com">Email</a>
+    </div>
   </body>
 </html>
